[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Enemies/Bowman 2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemies/Bowman 4.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/Bowman 1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemies/Bowman 3.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Bowman.gd" type="Script" id=5]
[ext_resource path="res://Sprites/Ranged/Bow.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "Moving",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 14.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 6.4124
height = 13.9704

[node name="Bowman" type="KinematicBody2D"]
collision_layer = 6
collision_mask = 6
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -4 )
frames = SubResource( 1 )
animation = "Moving"
frame = 5
speed_scale = 2.5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -4 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="RightGround" type="RayCast2D" parent="."]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2147483652

[node name="LeftGround" type="RayCast2D" parent="."]
position = Vector2( -8, 0 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 4

[node name="RightWall" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 10, 0 )
collision_mask = 4

[node name="LeftWall" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -10, 0 )
collision_mask = 4

[node name="RightCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 100, 0 )

[node name="LeftCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -100, 0 )

[node name="RightClose" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 50, 0 )

[node name="LeftClose" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -50, 0 )

[node name="RightBow" type="Sprite" parent="."]
position = Vector2( 4, -1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="LeftBow" type="Sprite" parent="."]
position = Vector2( -4, -1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
flip_h = true

[node name="RightPos" type="Node2D" parent="."]
position = Vector2( 10, -1 )

[node name="LeftPos" type="Node2D" parent="."]
position = Vector2( -10, -1 )

[node name="Retreat" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Shoot" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Retreat" to="." method="_on_Retreat_timeout"]
[connection signal="timeout" from="Shoot" to="." method="_on_Shoot_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
